0.23
- done a lot of work work on XHTML 1.1 validation (still not finished)
- changed the internal CSS array structure, thus P4A::addCSS() and P4A::dropCSS() are changed
- added javascript and css local to every mask, thus P4A_Mask::addCss() and P4A_Mask::dropCss() were added
- added temporary javascript and css local to every mask, thus P4A_Mask::addTempCss() and P4A_Mask::dropTempCss() were added. These javascripts/css are dropped immediately after rendering
- changed tha default mask template to reflect the CSS handling changes
- fixed a bug with date_calendar widget, now it's possible to have more than one calendars on a mask
- dropped date_calendar.tpl because it's not used anymore
- added themes/default/widgets/date_calendar/p4a.js with some javascript code
- changed the inclusion system for date_calendar and rich_textarea widget, now all javascript/css are included only once
- added possibility to extend a P4A Application
- added P4A_Base_Application (non included in the p4a release because we need documentation)
- added P4A_Simple_Toolbar
- fixed a bug in P4A_DB_Source: _composeSelectPkQuery with joined tables

0.22
- fixed a bug in P4A_DB_Source with multivalue fields
- added P4A_Field::getAsMulticheckbox(), use it with $field->setType('multicheckbox')
- some code has been beautified
- updated CREDITS
- updated TODO

0.21
- all actions and events are now lowercase, also to print out corrected XHTML
- fixed a password rendering bug: if a password field is not filled, now you'll not see the obfuscator after submit
- renamed "menu_drop_down" template to "menu"
- removed P4A_Menu::setType()
- removed tabbed menu
- removed P4A_Sheets_Group widget
- some bugfixes in CSS
- added P4A::addJavascript() and P4A::dropJavascript()
- changed javascript file inclusion in masks templates
- updated TODO
- updated README, removed info about untested browsers
- ie7 (http://dean.edwards.name/IE7/) library has been implemented (thanks to Francesco Dominidiato)

0.20