@@ -25,4 +25,5 @@ Alen Toric <a.toric@quicknet.nl>
 Thiago Trindade <thiagownt@hotmail.com>
 Valery Sidorov <valery@blagovest.com>
 Tomas Kuba
-Francesco Dominidiato <me@illogioco.com> http://sourceforge.net/users/illogico
+Francesco Dominidiato <me@illogioco.com> (http://sourceforge.net/users/illogico)
+Justin Koivisto (http://www.koivi.com)
