@@ -1,6 +1,6 @@
-/*   -----------   */
-/*   P4A CLASSES   */
-/*   -----------   */
+/***************/
+/* P4A CLASSES */
+/***************/
 
 body {
 	height: 100%;
@@ -26,6 +26,7 @@ body {
 	background-color: #FAFAFA;
 	border-bottom: 1px solid #CCC;
 	padding: 2px;
+	clear: both;
 }
 
 #mainContainer {
@@ -220,9 +221,9 @@ label {
 	margin-left: 120px;
 }
 
-/*   ---------   */
-/*   HTML TAGS   */
-/*   ---------   */
+/*************/
+/* HTML TAGS */
+/*************/
 
 body {
 	SCROLLBAR-FACE-COLOR: #C6D3DE;
@@ -269,13 +270,6 @@ input:focus{
 	background-color: #F0F0F0;
 }
 
-.mainmenuSel {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-weight:bolder;
-	font-size: 10px;
-	color: #255587;
-}
-
 textarea {
 	border: 1px solid #C6D3DE;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -296,96 +290,94 @@ select {
 	color:#4B718A;
 }
 
-/*
-select:focus{
-	border: 1px solid;
-	background-color: #F0F0F0;
-}
-*/
+/***********************************************************/
+/* MENU WIDGET                                             */
+/* original code by Justin Koivisto - http://www.koivi.com */
+/***********************************************************/
 
-/*   ----   */
-/*   MENU   */
-/*   ----   */
-
-.LinkMainMenu:link
-{
-	font-size: 11px;
-    COLOR: #B7C0C9;
-    TEXT-DECORATION: none
+#menu {
+	background: #fafafa;
+	border-bottom: 1px solid #ccc;
 }
 
-.LinkMainMenu:visited, .LinkMainMenu:active
-{
-	font-size: 11px;
-    COLOR: #B7C0C9;
-    TEXT-DECORATION: none
+#menu:after {
+	display: block;
+	clear: both;
+	content: "";
 }
 
-.LinkMainMenu:hover
-{
-	font-size: 11px;
-    COLOR: #255587;
-    TEXT-DECORATION: none
+.p4a_menu {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	position: static;
+	z-index: 20;
+}
+    
+.p4a_menu .accesskey {
+	color: black;
+}
+    
+.p4a_menu li {
+	float: left;
+	background: #fafafa;
+	margin-left: 10px;
+	display: block;
 }
 
-.LinkSecondMenu:link, .LinkSecondMenu:visited, .LinkSecondMenu:active
-{
-	font-size: 10px;
-    COLOR: #255587;
-    TEXT-DECORATION: none
+.p4a_menu ul {
+	position: absolute;
+	margin: 0px;
+	padding: 0px;
+	list-style-type: none;
+	display: none;
+	background-color: #fafafa;
+	z-index: 40;
+	border: 1px solid #ccc;
+	width: 120px;
 }
 
-.LinkSecondMenu:hover
-{
-	font-size: 10px;
-    COLOR: #255587;
-    TEXT-DECORATION: underline
+.p4a_menu ul li {
+	margin: 0;
+	width: 120px;
 }
 
-.LinkCalendarDayMonview
-{
-	color:red;
-	text-decoration:none;
+.p4a_menu li a {
+	display: block;
+	padding: 5px;
+	text-decoration: none;
+	color: black;
+}
+
+.p4a_menu a:hover, .p4a_menu li:hover {
+	display: block;
+	background-color: #e2e7ed;
+}
+
+.p4a_menu ul ul{
+	display: none;
+	margin-top: -2em;
+	margin-left: 120px;
+}
+
+.p4a_menu li:hover ul ul,              
+.p4a_menu li:hover ul ul ul,
+.p4a_menu li:hover ul ul ul ul,
+.p4a_menu li:hover ul ul ul ul ul{
+	display:none;
+}
+
+.p4a_menu li:hover ul,
+.p4a_menu ul li:hover ul,
+.p4a_menu ul ul li:hover ul,
+.p4a_menu ul ul ul li:hover ul,
+.p4a_menu ul ul ul ul li:hover ul{
 	display:block;
-	border:none;
-}
-.LinkCalendarDayMonview:hover
-{
-/*	border:1px solid #4B718A;  */
 }
 
-.LinkCalendarAppMonview
-{
-	text-decoration:none;
-	display:block;
-	background-color:white;
-	padding:3px;
-}
-.LinkCalendarAppMonview:hover
-{
-	background-color: #F4F7FA;
-}
-.CalendarTimeAppMonview{
-	font-weight:bold;
-	font-size:9px;
-	font-family:monospace;
-}
-
-.CalendarThAppMonview{
-	border-color:#4B718A;
-}
-
-.CalendarTdAppMonview{
-	border-color:#4B718A;
-}
-
-.CalendarTdAppMonview:hover{
-	background-color:#E2E7ED;
-}
-
-.CalendarTableMonview{
-	border-collapse:collapse;
-}
+/*******************/
+/* END MENU WIDGET */
+/*******************/
 
 .navigator {
 	margin-left: 0px;
@@ -396,7 +388,6 @@ select:focus{
 	padding-left:15px;
 	list-style-position:inside;
 }
-
 
 .navigator a {
 	text-decoration:none;
@@ -431,68 +422,68 @@ select:focus{
 }
 
 #sidebar {
-	border:1px solid #CCC;
-	position:fixed;
-	top:70px;
-	bottom:10px;
- 	right:0px;
- 	height:600px;
-	padding:10px;
-	width:280px;
- 	z-index:2;
+	border: 1px solid #CCC;
+	position: fixed;
+	top: 70px;
+	bottom: 10px;
+ 	right: 0px;
+ 	height: 600px;
+	padding: 10px;
+	width: 280px;
+ 	z-index: 2;
 }
 
 fieldset.frame,div.frame {
-	padding:0px;
+	padding: 0px;
 }
 
 .row {
-	clear:both;
+	clear: both;
 }
 
 div.br{
-	clear:both;
+	clear: both;
 	height: 1px;
 	line-height: 1px;
 	font-size: 1px;
 }
 
 fieldset.frame {
-	border:1px solid #C6D3DE;
-	padding:10px 15px;
+	border: 1px solid #C6D3DE;
+	padding: 10px 15px;
 }
 
 legend {
-	font-weight:bold;
-	font-size:12px;
+	font-weight: bold;
+	font-size: 12px;
 }
 
 .table {
-	margin:5px 20px 10px 2px;
-	border-collapse:collapse;
-	width:95%;
+	margin: 5px 20px 10px 2px;
+	border-collapse: collapse;
+	width: 95%;
 }
 .table caption{
-	font-size:12px;
-	font-weight:bold;
-	margin:5px;
+	font-size: 12px;
+	font-weight: bold;
+	margin: 5px;
 }
 .table td{
-	padding:2px;
-	border:2px solid white;
+	padding: 2px;
+	border: 2px solid white;
 }
 .table_container {
- 	float:left;
+ 	float: left;
 }
 .table_container .frame{
-	border-top:1px solid #C6D3DE;
-	background:#fafafa;
+	border-top: 1px solid #C6D3DE;
+	background: #fafafa;
 }
 
 .table_container .row{
-	background:#fafafa;
+	background: #fafafa;
 }
 
 .accesskey {
-	text-decoration:underline;
+	text-decoration: underline;
 }
