@@ -1,75 +1,0 @@
-.menuList, .menuList *{
-	z-index:2;
-}
-
-.menuList {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  color: #4B718A;
-  background-color: #FAFAFA;
-  margin: 0px;
-  display:block;
-  padding: 4px 6px;
-  border-bottom: 1px solid #CCC;
-/*   font-weight:bold; */
-}
-
-.menuSeparator {
-	border-top: 1px solid #ccc;
-}
-
-.menuList ul {
-  margin: 0px;
-  padding: 0px;
-}
-
-.menuList li {
-  display: inline;
-  list-style: none;
-}
-
-a.actuator {
-  background-color: transparent;
-/*   color: #4B718A; */
-  color:black; 
-  margin: 0px;
-  padding: 4px 6px;
-  text-decoration: none;
-  font-size: 11px;
-  position:relative;
-}
-
-a.actuator:hover {
-  background-color: #E2E7ED;
-}
-
-.menu {
-  color: #000;
-  background-color: #FAFAFA;;
-  border: 1px solid #CCC;
-  position: absolute;
-  visibility: hidden;
-}
-
-.menu li a {
-  background-color: transparent;
-  display: block;
-/*   color: #4B718A; */
-  color:black;
-  font-size: 11px;
-  line-height: 1.75em;
-  margin: 0px 0px -1px 0px;
-  padding: 1px 15px 2px 15px;
-  text-decoration: none;
-}
-
-a span{
-	color:black;
-} 
-
-.menu li a:hover {
-  background-color: #E2E7ED;
-}
-
-span.key {
-  text-decoration: underline;
-}
